# gpa_calculator_cpp

./: CMakeLists.txt  README.md  calculate_student_gpa.h  display_subj_grades.h  enter_total_mark.h  file.csv  grade_calculator.h  grade_of_subj.h  identify_grade.h  last_GPA.h  main.cpp  register_subj_crts.h  register_subj_name.h  register_subj_name_crts.h  total_score_from_csv.h  value_of_subj.h
subjects/: calculus.csv  file.csv
