cmake_minimum_required(VERSION 3.17)
project(GPA)

set(CMAKE_CXX_STANDARD 14)

add_executable(gpa_calculator_cpp main.cpp register_subj_crts.h enter_total_mark.h last_GPA.h value_of_subj.h grade_of_subj.h display_subj_grades.h register_subj_name.h calculate_student_gpa.h identify_grade.h grade_calculator.h total_score_from_csv.h)